ACT_3/fintech-solutions/k8s-manifests/03-mysql-deployment.yaml
# 03-mysql-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  clusterIP: None # Esto crea un "Headless Service". No tiene IP propia, sino que resuelve directamente a las IPs de los pods. Esencial para StatefulSets.
  selector:
    app: mysql
