ACT_3/fintech-solutions/k8s-manifests/04-backend-deployment.yaml
# 04-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 2
  selector: { matchLabels: { app: fintech-backend } }
  template:
    metadata:
      labels: { app: fintech-backend }
    spec:
      containers:
      - name: backend
        image: ijonnas/fintech-back:latest # Usando tu imagen de Docker Hub
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: ClusterIP
  selector:
    app: fintech-backend
  ports:
    - { port: 80, targetPort: 3000 }
