ACT_3/fintech-solutions/k8s-manifests/05-frontend-deployment.yaml
# 05-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 2
  selector: { matchLabels: { app: fintech-frontend } }
  template:
    metadata:
      labels: { app: fintech-frontend }
    spec:
      containers:
      - name: frontend
        image: ijonnas/fintech-front:latest # Usando tu imagen de Docker Hub
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: ClusterIP
  selector:
    app: fintech-frontend
  ports:
    - { port: 80, targetPort: 80 }
