ACT_3/fintech-solutions/k8s-manifests/06-ingress.yaml
# 06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fintech-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb # Forma moderna y correcta
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend: { service: { name: backend-service, port: { number: 80 } } }
          - path: /
            pathType: Prefix
            backend: { service: { name: frontend-service, port: { number: 80 } } }
